anthos-demo/hello-world/anthos-gke-demo01/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
    configmanagement.gke.io/cluster-selector: selector-ship2
spec:
  rules:
  - http:
      paths:
      - path: /greet-the-world        
        pathType: ImplementationSpecific
        backend:
          service:
            name: hello-service
            port:
              number: 60000
